--- a/layouts/index.html
+++ b/layouts/index.html
@@ -235,7 +235,9 @@
     {{ $projectsData := index site.Data .Language.Lang "projects" }}
     {{ $projects := cond (and $projectsData $projectsData.projects) $projectsData.projects site.Params.projects }}
 
-    {{ with $projects }}
+    {{ $featuredProjects := where $projects "featured" true }}
+
+    {{ with $featuredProjects }}
     <section class="mt-12 md:mt-20 mb-12 md:mb-20">
         <div class="flex justify-between items-center mb-6 md:mb-8">
             <h2 class="text-2xl md:text-4xl font-bold">{{ T "projectsTitle" }}</h2>
@@ -259,12 +261,14 @@
                         <p class="hidden md:block text-sm text-white mb-3 line-clamp-3 md:line-clamp-4">{{ .description }}</p>
                         
                         <!-- Learn More button -->
+                        {{ if .link}}
                         <a href="{{ print "projects/" .link }}" class="bg-white/90 backdrop-blur-sm hover:bg-white text-black text-xs md:text-sm font-medium py-1 md:py-1.5 px-2 md:px-3 rounded-md inline-block transition-all duration-300 transform opacity-100 md:opacity-0 group-hover:opacity-100 w-fit flex items-center shadow-lg hover:shadow-xl">
                             {{ T "learnMore" }}
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-3.5 w-3.5 ml-1 transform group-hover:translate-x-1 transition-transform duration-200" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3" />
                             </svg>
                         </a>
+                        {{ end }}
                     </div>
                 </div>
             </div>
